<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/endGameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/end_game_text"
        android:textColor="@color/lightGreen"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/endGameScoreText"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:text="@string/end_game_score_text"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/endGameScore"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:text="@string/end_game_score_number"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#03A9F4"
        android:textColor="@color/white"
        android:text="@string/end_game_play_again_button"/>

</LinearLayout>