<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMultiplayer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <com.francescofricano.midichallenge.view_components.PlayerScore
        android:id="@+id/PlayerScoreOneMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        app:layout_constraintTop_toTopOf="@id/toolbarMultiplayer"
        app:layout_constraintBottom_toBottomOf="@id/toolbarMultiplayer"
        app:layout_constraintLeft_toLeftOf="@id/toolbarMultiplayer"
        app:layout_constraintRight_toLeftOf="@id/imageViewTitleMultiplayer"
        app:layout_constraintHorizontal_bias="0.2" />

    <TextView
        android:id="@+id/imageViewTitleMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/game_classic_label"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/toolbarMultiplayer"
        app:layout_constraintBottom_toBottomOf="@id/toolbarMultiplayer"
        app:layout_constraintLeft_toLeftOf="@id/toolbarMultiplayer"
        app:layout_constraintRight_toRightOf="@id/toolbarMultiplayer"/>

    <com.francescofricano.midichallenge.view_components.PlayerScore
        android:id="@+id/PlayerScoreTwoMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="-1"
        app:layout_constraintTop_toTopOf="@id/toolbarMultiplayer"
        app:layout_constraintBottom_toBottomOf="@id/toolbarMultiplayer"
        app:layout_constraintLeft_toRightOf="@id/imageViewTitleMultiplayer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.8" />

    <TextView
        android:id="@+id/textViewPlayerOnTurnMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/game_player_on_turn_text"
        android:textColor="#379B40"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/textViewQuestionCounterMultiplayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMultiplayer"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/textViewQuestionCounterMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:text="@string/game_question_counter"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMultiplayer" />

    <com.francescofricano.midichallenge.view_components.TimeCounter
        android:id="@+id/timeCounterMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewQuestionCounterMultiplayer"
        app:layout_constraintTop_toBottomOf="@id/toolbarMultiplayer"
        app:layout_constraintHorizontal_bias="1"/>

    <TextView
        android:id="@+id/textViewSuggestionMultiplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#80FFFFFF"
        android:gravity="center"
        android:text="@string/game_suggestion_text"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewQuestionCounterMultiplayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/buttonBidMultiplayer"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:background="@drawable/bottone_medio_verde_chiaroscuro"
        android:text="@string/game_bid_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/horizontalNumberPickerMultiplayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.francescofricano.midichallenge.view_components.HorizontalNumberPicker
        android:id="@+id/horizontalNumberPickerMultiplayer"
        android:layout_width="150dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonPassMultiplayer"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:background="@drawable/bottone_medio_ruggine"
        android:text="@string/game_pass_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/horizontalNumberPickerMultiplayer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPlayMultiplayer"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@drawable/bottone_mediolungo_playpause"
        android:enabled="false"
        android:text="@string/game_play_button"
        app:layout_constraintTop_toBottomOf="@id/horizontalNumberPickerMultiplayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <EditText
        android:id="@+id/editTextAnswerMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/buttonConfirmMultiplayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/buttonConfirmMultiplayer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/bottone_lungo_03"
        android:text="@string/game_confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
